# Audio-Studio

./: .chatgpt-pr-test.md  .chatgpt-write-test.md  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  index.html  package.json
GUI/backend/: CMakeLists.txt
GUI/backend/include/: audio_studio.hpp
GUI/backend/src/: http_server.cpp  main.cpp  mock_runtime.cpp  project_orchestration.cpp  system_info_controllers.cpp
GUI/backend/tests/: backend_tests.cpp
audio_controller/: CMakeLists.txt
audio_controller/common/: ac_main.c
audio_controller/include/: ac_config.h  audio_controller.h
audio_controller/include/audio_controller/: audio_controller.h
audio_controller/src/: ac_audio.c  ac_audio.h  ac_audio_controller.c  ac_audio_controller_internal.h  ac_datalink.c  ac_datalink.h  ac_log.c  ac_log.h  ac_sof_loader.c  ac_topology_parser.c  ac_topology_parser.h  ac_topology_uapi.h  ac_transport.c  ac_transport.h  ac_transport_channel.h  audio_controller.c  audio_controller_internal.h  main.c  sof_loader.c  topology_parser.c  topology_parser.h  topology_uapi.h
audio_controller/src/platform/: host_test.c
audio_controller/tests/: ac_transport_tests.c
backend/: CMakeLists.txt
backend/include/: audio_studio.hpp
backend/src/: http_server.cpp  main.cpp  mock_runtime.cpp
backend/tests/: backend_tests.cpp
cli/: CMakeLists.txt  Kconfig
cli/common/: cli_stub_main.cpp
cli/common/include/: cli_common.hpp
cli/common/src/: cli_common.cpp
cli/tests/: cli_tests.cpp
cli/tools/: as_config.cpp  as_control.cpp  as_dump.cpp  as_log.cpp  as_play.cpp  as_record.cpp
drivers/: CMakeLists.txt  Kconfig
drivers/audio/: CMakeLists.txt  Kconfig
drivers/audio/include/: audio_device.hpp
drivers/audio/src/: alsa_audio_device.cpp  alsa_audio_device.hpp  linux_host_audio_device.cpp  linux_host_audio_device.hpp  macos_core_audio_device.cpp  macos_core_audio_device.hpp  pulse_audio_device.cpp  pulse_audio_device.hpp  wasapi_audio_device.cpp  wasapi_audio_device.hpp
drivers/control/: CMakeLists.txt  Kconfig
drivers/control/include/: control_device.hpp
drivers/control/src/: macos_control_device.cpp  macos_control_device.hpp
drivers/datalink/: CMakeLists.txt  Kconfig
drivers/datalink/include/: datalink_device.hpp
drivers/datalink/src/: linux_host_datalink_device.cpp  linux_host_datalink_device.hpp  macos_datalink_device.cpp  macos_datalink_device.hpp
drivers/dummy/include/: dummy_driver.hpp
drivers/dump/: CMakeLists.txt  Kconfig
drivers/dump/include/: dump_device.hpp
drivers/dump/src/: macos_dump_device.cpp  macos_dump_device.hpp
drivers/dynlib/: CMakeLists.txt  Kconfig
drivers/dynlib/include/: dynlib_driver.hpp
drivers/dynlib/src/: macos_dynlib_driver.cpp  macos_dynlib_driver.hpp
drivers/filesystem/: CMakeLists.txt  Kconfig
drivers/filesystem/include/: filesystem_driver.hpp
drivers/filesystem/src/: macos_filesystem_driver.cpp  macos_filesystem_driver.hpp
drivers/include/: driver_manager.hpp
drivers/log/: CMakeLists.txt  Kconfig
drivers/log/include/: log_device.hpp
drivers/log/src/: linux_host_log_device.cpp  macos_log_device.cpp  macos_log_device.hpp
drivers/os/: CMakeLists.txt  Kconfig
drivers/os/include/: os_driver.hpp
drivers/os/src/: linux_host_os_driver.cpp  linux_host_os_driver.hpp  macos_os_driver.cpp  macos_os_driver.hpp
drivers/pipe/: CMakeLists.txt  Kconfig
drivers/pipe/include/: pipe_driver.hpp
drivers/pipe/src/: linux_host_pipe_driver.cpp  macos_pipe_driver.cpp  macos_pipe_driver.hpp
drivers/socket/: CMakeLists.txt  Kconfig
drivers/socket/include/: socket_driver.hpp
drivers/socket/src/: macos_socket_driver.cpp  macos_socket_driver.hpp  windows_host_socket_driver.cpp  windows_host_socket_driver.hpp
drivers/src/: driver_manager.cpp
drivers/transport/: CMakeLists.txt  Kconfig
drivers/transport/include/: transport_driver.hpp
drivers/transport/src/: linux_host_transport_driver.hpp  macos_transport_driver.cpp  macos_transport_driver.hpp
plugins/builtin_module_configs/: CMakeLists.txt
plugins/builtin_module_configs/src/: builtin_module_configs.cpp
plugins/module_config_sdk/: CMakeLists.txt
plugins/module_config_sdk/include/: module_config_plugin.hpp
rpc/: CMakeLists.txt  Kconfig
rpc/api/: audio_studio_rpc_api.cpp
rpc/include/: audio_rpc.hpp  audio_rpc_client.hpp  json_rpc.hpp  rpc_api_registry.hpp  rpc_framing.hpp  rpc_pipe_transport.hpp  rpc_runtime_context.hpp  rpc_server.hpp  rpc_socket_transport.hpp  rpc_stream_transport.hpp
rpc/src/: audio_rpc.cpp  audio_rpc_client.cpp  json_rpc.cpp  json_value.cpp  rpc_api_registry.cpp  rpc_framing.cpp  rpc_pipe_server.cpp  rpc_pipe_transport.cpp  rpc_runtime_context.cpp  rpc_server.cpp  rpc_socket_server.cpp  rpc_socket_transport.cpp
server/: CMakeLists.txt  Kconfig
server/as_server/: main.cpp
server/drivers/: CMakeLists.txt  Kconfig
server/drivers/audio/: CMakeLists.txt
server/drivers/control/: CMakeLists.txt  Kconfig
server/drivers/dummy/: CMakeLists.txt  Kconfig
server/drivers/dump/: CMakeLists.txt
server/drivers/dynlib/: CMakeLists.txt
server/drivers/filesystem/: CMakeLists.txt  Kconfig
server/drivers/include/: driver_manager.hpp
server/drivers/log/: Kconfig
server/drivers/os/: Kconfig
server/drivers/socket/: CMakeLists.txt
server/drivers/src/: CMakeLists.txt  driver_manager.cpp
server/drivers/transport/: CMakeLists.txt  Kconfig
server/framework/: CMakeLists.txt  Kconfig
server/framework/audio/: CMakeLists.txt  Kconfig
server/framework/common/: CMakeLists.txt  Kconfig
server/framework/config/: CMakeLists.txt  Kconfig
server/framework/control/: CMakeLists.txt  Kconfig
server/framework/dump/: CMakeLists.txt  Kconfig
server/framework/log/: CMakeLists.txt  Kconfig
server/framework/plugin/: CMakeLists.txt  Kconfig
server/main/: as_server_main.cpp  main.cpp  server_app.cpp  server_app.hpp
server/platform/: CMakeLists.txt  Kconfig
server/platform/a2/: Kconfig  (+1 more)
server/tests/: Kconfig  config_test_plugin.cpp  driver_interface_tests.cpp  driver_test_plugin.cpp  server_tests.cpp
(+288 files in other folders)
